<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Random Travel</string>
    <string name="welcome_message">Welcome to our app!</string>


    <!-- general -->
    <string name="settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="continua_lb">Continue</string>
    <string name="accept">Accept</string>
    <string name="retry">Retry</string>
    <string name="password">Password</string>
    <string name="at_least_characters">at least %d characters</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="required_field">* required</string>
    <string name="optional_field">optional</string>
    <string name="phone_number">Phone Number</string>


    <!-- system -->
    <string name="system_no_gps">No location services found. Enable your location and try again</string>
    <string name="system_no_gps_whoops">Whoops!</string>
    <string name="system_no_internet">No internet connections found. Check your connection or try again</string>
    <string name="system_no_internet_whoops">Whoops!</string>
    <string name="system_exit_warning">Press again to exit app</string>
    <string name="system_logout_success">Logout successful.</string>


    <!-- Login -->
    <string name="login_btn">Sign In with Email</string>
    <string name="login_google_btn">Sign In with Google</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_new_user">New user? </string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_error">Invalid email or password.</string>


    <!-- Register -->
    <string name="register_title">Sign Up</string>
    <string name="register_error">Registration failed. Please try again.</string>
    <string name="register_success">Registration successful.</string>
    <string name="register_error_fields">Please fill all the fields.</string>
    <string name="register_error_password">must be 8+ characters with at least 1 uppercase, 1 lowercase, 1 digit, and 1 special character</string>
    <string name="register_error_email">Invalid email</string>


    <!-- Logout -->
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout_success">Logout successful.</string>

    <!-- Profile -->
    <string name="profile_navbar_button">Profile</string>
    <string name="profile_menu_my_account">My Account</string>
    <string name="profile_menu_orders">My Trips</string>
    <string name="profile_menu_lab">Lab</string>
    <string name="profile_menu_sign_out">Sign Out</string>
    <string name="profile_menu_exit">Exit</string>


    <!-- Button Labels -->
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>


    <!-- Error Messages -->
    <string name="error_network">Network connection error. Please try again.</string>
    <string name="error_empty_field">Please fill in all the required fields.</string>
    <string name="error_invalid_email">Invalid email address.</string>
    <string name="error_no_results">No results found.</string>
    <string name="error_unknown">An unknown error occurred.</string>


    <!-- Toast Messages -->
    <string name="toast_saved_successfully">Saved successfully.</string>
    <string name="toast_deleted_successfully">Deleted successfully.</string>
    <string name="toast_connection_lost">Connection lost. Please check your network.</string>


    <!-- Dialog Titles and Messages -->
    <string name="dialog_confirm_delete">Confirm Delete</string>
    <string name="dialog_delete_message">Are you sure you want to delete this item?</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_success_title">Success</string>


    <!-- Placeholders -->
    <string name="welcome_user">Welcome, %s!</string>
    <string name="items_selected_count">%d items selected.</string>
    <string name="unread_messages_count">You have %d unread messages.</string>


    <!-- Plurals for Number of Items -->
    <plurals name="items_selected">
        <item quantity="one">%d item selected.</item>
        <item quantity="other">%d items selected.</item>
    </plurals>

    <!-- Home -->
    <string name="home_navbar_button">home</string>
    <string name="home_categories_title">Your Dream Getaway</string>
    <string name="home_categories_title_sub">Recommended Vacations</string>
    <string name="home_categories_cta">View All</string>
    <string name="home_destinations_title">Top Destinations</string>
    <string name="home_destinations_title_sub">Recommended Destinations</string>
    <string name="home_destinations_cta">View All</string>

    <!-- Destinations -->
    <string name="destination_navbar_button">Destinations</string>
    <string name="destination_title">Destinations</string>
    <string name="destination_description">Explore our top destinations</string>
    <string name="destination_details">Details</string>
    <string name="destination_rating">Rating: %s</string>
    <string name="destination_reviews_count">%d Reviews</string>


    <!-- Categories -->
    <string name="category_navbar_button">Categories</string>
    <string name="category_title">Categories</string>
    <string name="category_all">All</string>
    <string name="category_beach">Beach</string>
    <string name="category_adventure">Adventure</string>
    <string name="category_culture">Culture</string>
    <string name="category_city">City</string>
    <string name="category_nature">Nature</string>


    <!-- Products -->
    <string name="product_title">Travel Packages</string>
    <string name="product_price">%s per person</string>
    <string name="product_duration">%d days</string>
    <string name="product_included">Included:</string>
    <string name="product_excluded">Excluded:</string>
    <string name="product_book_now">Book Now</string>
    <string name="product_reviews">Reviews</string>
    <string name="product_reviews_count">%d Reviews</string>
    <string name="title_activity_register_screen">RegisterScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Wishlist -->
    <string name="wishlist_navbar_button">Wishlist</string>
    <string name="wishlist_confirm_message">Added to wishlist</string>
    <string name="wishlist_confirm_message_remove">Removed from wishlist</string>
    <string name="wishlist_empty">You don\'t have any products in your wishlist </string>
    <string name="wishlist_title">Wishlist</string>

    <!-- Tours -->
    <string name="tours_navbar_button">Tours</string>
    <string name="tours_title">Tours</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="unknown_entity">No data found</string>
    <string name="confirm_exit_title">Title</string>
    <string name="confirm_exit_message">MEssage</string>
    <string name="confirm_exit_positive_button">Ok\n</string>
    <string name="confirm_exit_negative_button">Noooo</string>
    <string name="exit_confirmation_title">Do you want to exit?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_logo_description">Logo</string>
    <string name="product_label_package">Package Information</string>
    <string name="product_label_itinerary">Itinerary</string>
    <string name="back">Back</string>
    <string name="login_success">Logged in successfully!</string>
    <string name="wishlist_button_remove">Remove</string>



    <!-- notifications -->
    <string name="channel_default_name">General Notifications</string>
    <string name="channel_default_description">Random Travel Notifications</string>

    <string name="wishlist_notification_title">Travel Package Added</string>
    <string name="wishlist_notification_body">We have added the tour package to your wishlist</string>
    <string name="category_unknwown">Unknown Destination</string>
    <string name="product_unknwown">Unknown Product</string>
    <string name="destination_unknwown">Unknown Destination</string>
    <string name="caller_unknown">Caller Not Found</string>


</resources>