<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/profile_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profile_menu_my_account"
            android:icon="@drawable/ic_account"
            android:title="@string/profile_menu_my_account" />
        <item
            android:id="@+id/profile_menu_orders"
            android:icon="@drawable/ic_receipt"
            android:title="@string/profile_menu_orders" />
        <item
            android:id="@+id/profile_menu_lab"
            android:icon="@drawable/ic_labs"
            android:title="@string/profile_menu_lab" />
        <item
            android:id="@+id/profile_menu_sign_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/profile_menu_sign_out" />
        <item
            android:id="@+id/profile_menu_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/profile_menu_exit" />
    </group>

</menu>
