<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/login_logo_description"
        android:src="@drawable/logo"
        />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="@dimen/spacing_xxlarge"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_large">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_layout_email"

            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_medium" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_layout_password"

            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>




        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_gravity="end"
            android:clickable="true"
            android:text="@string/login_forgot_password"
            android:textColor="@color/colorPrimaryDark"
            />


        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_submit"
            style="@style/Widget.Material3.Button"
            android:layout_gravity="center"
            app:icon="@drawable/ic_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="-4dp"
            android:layout_marginEnd="-4dp"
            android:text="@string/login_btn"
            android:textAllCaps="false" />
        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_medium" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_submit_google"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="-4dp"
            android:text="@string/login_google_btn"
            android:layout_marginEnd="-4dp"/>


        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_new_user"
                android:textColor="@color/blue_grey_300"
                android:layout_marginEnd="@dimen/spacing_large"/>

            <TextView
                android:id="@+id/login_sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/login_sign_up"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

            <TextView
                android:id="@+id/login_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccentDark"
                android:textSize="14sp"
                android:visibility="gone"
                android:layout_marginTop="8dp"
                />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>