<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/spacing_large"
            android:paddingVertical="@dimen/spacing_mxlarge">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_layout_first_name"

                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                app:helperText="@string/required_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_field_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_layout_last_name"

                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                app:helperText="@string/required_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_field_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />



            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayout"
                android:id="@+id/register_layout_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:helperText="@string/optional_field"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_field_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />




            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_layout_email"

                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:helperText="@string/required_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_field_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_layout_password"

                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:helperText="@string/required_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_field_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <!-- Submit Button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <Button
                    android:id="@+id/register_button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginEnd="8dp"
                    android:maxWidth="120dp"
                    style="@style/Widget.Material3.Button.Muted"/>

                <Button
                    android:id="@+id/register_button_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:maxWidth="120dp"
                    style="@style/Widget.Material3.Button"
                    />

            </LinearLayout>


        </LinearLayout>




    </androidx.core.widget.NestedScrollView>



</LinearLayout>


